[package]
name = "boomphf"
version = "0.5.0"
authors = ["Patrick Marks <pmarks@gmail.com>"]
repository = "https://github.com/10XGenomics/rust-boomphf"
homepage = "https://github.com/10XGenomics/rust-boomphf"
license = "MIT"
description = "Scalable and Efficient Minimal Perfect Hash Functions"   
documentation = "https://10xgenomics.github.io/rust-boomphf/master/boomphf/index.html"

[dependencies]
fnv = ">=1.0"
serde = { version=">=1.0", optional = true, features=["derive"] }
rayon = ">=1.0"
crossbeam-utils = "0.6.5"
wyhash = "0.3.0"

[dev-dependencies]
quickcheck = "0.3"
bencher = ">=0.1"

[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[dependencies.heapsize]
optional = true
version = ">=0.4.2"
default-features = false

[[bench]]
name = "build"
harness = false