[package]
name = "boomphf"
version = "0.5.9"
authors = ["Patrick Marks <pmarks@gmail.com>"]
repository = "https://github.com/10XGenomics/rust-boomphf"
homepage = "https://github.com/10XGenomics/rust-boomphf"
license = "MIT"
description = "Scalable and Efficient Minimal Perfect Hash Functions"
documentation = "https://10xgenomics.github.io/rust-boomphf/master/boomphf/index.html"
readme = "README.md"
keywords = ["hashing", "minimal", "perfect"]
edition = "2018"

[dependencies]
serde = { version=">=1.0", optional = true, features=["derive"] }
rayon = ">=1.0"
crossbeam-utils = ">=0.7.2, <0.9"
wyhash = ">=0.3, <=0.5"
log = "0.4.*"

[dev-dependencies]
quickcheck = "1.0.2"
bencher = ">=0.1"

[[bench]]
name = "build"
harness = false
