[package]
name = "boomphf"
version = "0.6.0"
authors = ["Patrick Marks <pmarks@gmail.com>"]
repository = "https://github.com/10XGenomics/rust-boomphf"
homepage = "https://github.com/10XGenomics/rust-boomphf"
license = "MIT"
description = "Scalable and Efficient Minimal Perfect Hash Functions"
documentation = "https://10xgenomics.github.io/rust-boomphf/master/boomphf/index.html"
readme = "README.md"
keywords = ["hashing", "minimal", "perfect"]
edition = "2021"
include = ["src/**/*", "benches/*", "LICENSE", "README.md"]

[dependencies]
serde = { version=">=1.0", optional = true, features=["derive"] }
rayon = { version=">=1.0", optional = true }
crossbeam-utils = { version=">=0.7.2, <0.9", optional = true }
wyhash = ">=0.3, <=0.5"
log = "0.4.*"

[dev-dependencies]
quickcheck = "1.0.2"
bencher = ">=0.1"

[[bench]]
name = "build"
harness = false

[features]
default = ["parallel"]
parallel = ["rayon", "crossbeam-utils"]
